# rexRL_rust

./: .gitignore  Cargo.toml  README.md  savegame.json
design_docs/: 00 - gameplay_ideas.md  01 - Thoughts on The Buried Tower.md  01-ThoughtsOnTheTower.txt  x - The Swarm
raws/: spawns.json
resources/: index.html  titlemenu.xp  wfc-populated.txt  wfc-populated.xp
resources/sprites-aesprite/: repair_pack.aseprite
src/: bystander_ai_system.rs  camera.rs  components.rs  damage_system.rs  gamelog.rs  gamesystem.rs  gui.rs  hunger_system.rs  inventory_system.rs  main.rs  map.rs  map_indexing_system.rs  melee_combat_system.rs  monster_ai_system.rs  particle_system.rs  player.rs  random_table.rs  rect.rs  rex_assets.rs  saveload_system.rs  spawner.rs  trigger_system.rs  visibility_system.rs
src/map/: mod.rs  tiletype.rs
src/map_builders/: area_starting_points.rs  bsp_dungeon.rs  bsp_interior.rs  cellular_automata.rs  common.rs  cull_unreachable.rs  distant_exit.rs  dla.rs  door_placement.rs  drunkard.rs  maze.rs  mod.rs  prefab_builder.rs  room_based_spawner.rs  room_based_stairs.rs  room_based_starting_position.rs  room_corridor_spawner.rs  room_draw.rs  room_exploder.rs  room_sorter.rs  rooms_corridors_dogleg.rs  rooms_corridors_lines.rs  simple_map.rs  town.rs  voronoi.rs  voronoi_spawning.rs
src/map_builders/prefab_builder/: mod.rs  prefab_levels.rs  prefab_rooms.rs  (+1 more)
src/raws/: item_structs.rs  mob_structs.rs  mod.rs  prop_structs.rs  rawmaster.rs  spawn_table_structs.rs
wasm/: index.html  rex_rl_rust.js  rex_rl_rust_bg.wasm
wasm-build/: rex_rl_rust_bg.wasm
(+4 files in other folders)
