[package]
name = "rex_rl_rust"
version = "0.0.1"
authors = ["Alexander Baker <alex.diogenes@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.1" }
specs = "0.16.1"
specs-derive = "0.4.1"