[package]
name = "rex_rl_rust"
version = "0.1.0"
authors = ["Alexander Baker <alex.diogenes@outlook.com>"]
edition = "2018"

# This program is based on the excellent tutorial by Herbert Wolverson (TheBracket) at 
# https://bfnightly.bracketproductions.com/rustbook/chapter_0.html 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.0", features = ["serde"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
serde= { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"